--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,10 @@ jobs:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     steps:
     - name: Download Release Data
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v3
       with:
         name: data
+        path: data
     - name: Get Tag Name
       id: get_data
       shell: bash
@@ -53,7 +54,7 @@ jobs:
         echo ::set-output name=RELEASE_URL::$URL
         echo "URL = $URL"
         echo name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     - uses: ilammy/msvc-dev-cmd@v1
     - name: Make Nix
       if: matrix.os != 'windows-latest'
