--- a/Source/GNUmakefile
+++ b/Source/GNUmakefile
@@ -29,12 +29,14 @@ else
     
     OS:=$(shell uname -s)
     CPU:=$(shell uname -p)
-
+    ifeq ($(OS),Darwin)
+        # add both mac architectures to create a fat universal binary
+        CFLAGS+=-arch x86_64 
+        CFLAGS+=-arch arm64
+    endif
+    
     ifdef CPU_OPT
         ifeq ($(OS),Darwin)
-            # add both mac architectures to create a fat universal binary
-            CFLAGS+=-arch x86_64 
-            CFLAGS+=-arch arm64
             MAH_SHEEN:=$(shell machine)
             ifeq ($(CPU),powerpc)
                 CFLAGS+=-fast
