--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,24 @@ Merlin32Test
 error_output.txt
 merlin32
 Breakpoints_v2.xcbkptlist
+/vcxproj/Debug/merlin32.Build.CppClean.log
+/vcxproj/Debug/merlin32.tlog/CL.command.1.tlog
+/vcxproj/Debug/merlin32.tlog/merlin32.lastbuildstate
+/vcxproj/Debug/merlin32.tlog/unsuccessfulbuild
+/vcxproj/Debug/merlin32.vcxproj.FileListAbsolute.txt
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
+/vcxproj/merlin32.vcxproj.user
+/vcxproj/x64/Debug/merlin32.Build.CppClean.log
+/vcxproj/x64/Debug/merlin32.exe.recipe
+/vcxproj/x64/Debug/merlin32.log
+/vcxproj/x64/Debug/merlin32.tlog/CL.command.1.tlog
+/vcxproj/x64/Debug/merlin32.tlog/Cl.items.tlog
+/vcxproj/x64/Debug/merlin32.tlog/CL.read.1.tlog
+/vcxproj/x64/Debug/merlin32.tlog/CL.write.1.tlog
+/vcxproj/x64/Debug/merlin32.tlog/link.command.1.tlog
+/vcxproj/x64/Debug/merlin32.tlog/link.read.1.tlog
+/vcxproj/x64/Debug/merlin32.tlog/link.write.1.tlog
+/vcxproj/x64/Debug/merlin32.tlog/merlin32.lastbuildstate
+/vcxproj/x64/Debug/merlin32.vcxproj.FileListAbsolute.txt
