--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,18 @@ Breakpoints_v2.xcbkptlist
 /vcxproj/x64/Debug/merlin32.tlog/link.write.1.tlog
 /vcxproj/x64/Debug/merlin32.tlog/merlin32.lastbuildstate
 /vcxproj/x64/Debug/merlin32.vcxproj.FileListAbsolute.txt
+/vcxproj/x64/Release/merlin32.Build.CppClean.log
+/vcxproj/x64/Release/merlin32.exe.recipe
+/vcxproj/x64/Release/merlin32.iobj
+/vcxproj/x64/Release/merlin32.ipdb
+/vcxproj/x64/Release/merlin32.log
+/vcxproj/x64/Release/merlin32.tlog/CL.command.1.tlog
+/vcxproj/x64/Release/merlin32.tlog/Cl.items.tlog
+/vcxproj/x64/Release/merlin32.tlog/CL.read.1.tlog
+/vcxproj/x64/Release/merlin32.tlog/CL.write.1.tlog
+/vcxproj/x64/Release/merlin32.tlog/link.command.1.tlog
+/vcxproj/x64/Release/merlin32.tlog/link.read.1.tlog
+/vcxproj/x64/Release/merlin32.tlog/link.write.1.tlog
+/vcxproj/x64/Release/merlin32.tlog/link.write.2u.tlog
+/vcxproj/x64/Release/merlin32.tlog/merlin32.lastbuildstate
+/vcxproj/x64/Release/merlin32.vcxproj.FileListAbsolute.txt
