More VS2022 dropping ignoring. Should really fix this to be *.crap rather than each specific filename.

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,52 @@ Breakpoints_v2.xcbkptlist
 /vcxproj/x64/Release/merlin32.tlog/link.write.2u.tlog
 /vcxproj/x64/Release/merlin32.tlog/merlin32.lastbuildstate
 /vcxproj/x64/Release/merlin32.vcxproj.FileListAbsolute.txt
+/vcxproj/x64/Debug/a65816_Code.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_Code.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_Cond.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_Cond.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_Data.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_Data.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_File.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_File.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_Line.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_Line.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_Link.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_Link.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_Lup.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_Lup.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_Macro.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_Macro.nativecodeanalysis.xml
+/vcxproj/x64/Debug/a65816_OMF.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/a65816_OMF.nativecodeanalysis.xml
+/vcxproj/x64/Debug/CodeAnalysisResultManifest.txt
+/vcxproj/x64/Debug/Dc_Library.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/Dc_Library.nativecodeanalysis.xml
+/vcxproj/x64/Debug/Main.nativecodeanalysis.sarif
+/vcxproj/x64/Debug/Main.nativecodeanalysis.xml
+/vcxproj/x64/Debug/vc.nativecodeanalysis.all.xml
+/vcxproj/x64/Release
+/vcxproj/x64/Release/a65816_Code.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_Code.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_Cond.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_Cond.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_Data.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_Data.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_File.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_File.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_Line.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_Line.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_Link.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_Link.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_Lup.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_Lup.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_Macro.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_Macro.nativecodeanalysis.xml
+/vcxproj/x64/Release/a65816_OMF.nativecodeanalysis.sarif
+/vcxproj/x64/Release/a65816_OMF.nativecodeanalysis.xml
+/vcxproj/x64/Release/CodeAnalysisResultManifest.txt
+/vcxproj/x64/Release/Dc_Library.nativecodeanalysis.sarif
+/vcxproj/x64/Release/Dc_Library.nativecodeanalysis.xml
+/vcxproj/x64/Release/Main.nativecodeanalysis.sarif
+/vcxproj/x64/Release/Main.nativecodeanalysis.xml
+/vcxproj/x64/Release/vc.nativecodeanalysis.all.xml
